removed some class tags / added float to section styles

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon IT Solutions</title>
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
        <!--Navigation bar-->
         <nav>
@@ -29,7 +29,7 @@
     <div class="hero"></div>
 
     <!--Section talking about what our company does-->
-    <section class="content">
+    <section>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notebook, that shows Search Engine Optimization keywords, sitting on a table with pens, a computer, and coffee on it." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -54,7 +54,7 @@
     </section>
 
     <!--Aside talking about benefits of working with our company-->
-    <aside class="benefits">
+    <aside>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="" />
@@ -78,7 +78,7 @@
         </div>
     </aside>
 
-    <footer class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
